deployment/canary/kube-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-prod
  labels:
    app: kube-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kube-prod
  template:
    metadata:
      labels:
        app: kube-prod
    spec:
      containers:
      - name: kube-prod
        imagePullPolicy: Always
        image: insang/calculator-m1:v0
        ports:
        - containerPort: 8080
        readinessProbe: # 요청을 처리할 준비가 되었는지 체크
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
