deployment/canary/kube-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-canary-service
spec:
  selector:
    app: kube-canary
  ports:
    - port: 8080
      # targetPort: 8080 #option
      # nodePort: 30007 #option
  type: NodePort
