deployment/canary/kube-prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-prod-service
spec:
  selector:
    app: kube-prod
  ports:
    - port: 8080
      # targetPort: 8080 #option
      # nodePort: 30007 #option
  type: NodePort
