deployment/canary/kube-canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true" # enable canary
    # weight 기반 라우팅 (100번 요청 중 50번)
    nginx.ingress.kubernetes.io/canary-weight: "50"
    # cookie 기반 라우팅 (cookie에 canary=always 로 설정시 canary 서버로 요청, canary=never 일 때 production)
    # nginx.ingress.kubernetes.io/canary-by-cookie: "canary" 
    # header 기반 라우팅 (header에 target=canary 로 설정시 canary 서버로 요청, 아니면 production)
    # nginx.ingress.kubernetes.io/canary-by-header: "target"
    # nginx.ingress.kubernetes.io/canary-by-header-value: "canary"
spec:
  rules:
    - host: ez2learn.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-canary-service
                port:
                  number: 8080
